--- a/style.css
+++ b/style.css
@@ -1,1 +1,14 @@
 /* Your CSS styles go here */
+body {
+    background-color: lightblue;
+}
+
+h1 {
+    color: white;
+    text-align: center;
+}
+
+p {
+    font-family: verdana;
+    font-size: 20px;
+}
